# ceam

./: .gitattributes  .gitignore  README.md  notes_ipykernel.txt  pyproject.toml
data/basemaps/osm/: sundarbans_relation_14937802.geojson
data/ntl/: ceam_bbox_features.csv
data/ntl/raw/201801/: SVDNB_npp_20180101-20180131_75N060E_vcmcfg_v10_c201805221252.tgz
data/ntl/raw/201806/: SVDNB_npp_20180601-20180630_75N060E_vcmcfg_v10_c201904251200.tgz
data/ntl/raw/201904/: SVDNB_npp_20190401-20190430_75N060E_vcmcfg_v10_c201905191000.tgz
outputs/integration/: flagged_cells_2km_pop70_ntl30.geojson
outputs/ntl/: ntl_2019_04_cvg_3857.tif  ntl_2019_04_rad_3857.tif
outputs/worldpop/: worldpop_2019_ppp_3857.tif
prelim_analysis/: 01_get_data.md  02_admin_boundaries.ipynb  02_osm_sundarbans.ipynb  03_admin_boundaries.ipynb  03_worldpop.ipynb  04_osm_sundarbans.ipynb  04_worldpop.ipynb  05_nighttimelight.ipynb  06_spatial_integration.ipynb  ceam_config.py
