[project]
name = "ceam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.7.4",
    "geemap>=0.36.6",
    "geodatasets>=2025.12.1",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "pyproj>=3.7.2",
    "rasterio>=1.4.4",
    "shapely>=2.1.2",
]
