[project]
name = "ceam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.7.0",
    "earthengine-api>=1.7.4",
    "fiona>=1.10.1",
    "geemap>=0.36.6",
    "geodatasets>=2025.12.1",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.2,<2.4",
    "pyogrio>=0.12.1",
    "pyproj>=3.7.2",
    "rasterio>=1.3.10,<1.4 ; platform_system=='Darwin' and platform_machine=='x86_64'",
    "rasterio>=1.4,<1.5 ; platform_system=='Darwin' and platform_machine=='arm64'",
    "shapely>=2.1.2",
]
